Fix - waybar general spacing

--- a/resources/.config/waybar/style.css
+++ b/resources/.config/waybar/style.css
@@ -1,9 +1,11 @@
 * {
     /* `otf-font-awesome` is required to be installed for icons */
     font-family: FontAwesome, Roboto;
-    font-size: 1.5rem;
+    font-size: 1rem;
     min-height: 0;
     padding: .5rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
 }
 
 window#waybar {
